VFX Builder cleanup